# ChangeLog for app-text/docbook2X
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/docbook2X/ChangeLog,v 1.38 2010/07/18 16:46:46 armin76 Exp $

  18 Jul 2010; Raúl Porcel <armin76@gentoo.org> docbook2X-0.8.8-r2.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #321899

  09 Jun 2010; Patrick Lauer <patrick@gentoo.org> docbook2X-0.8.8-r2.ebuild:
  Fixing automake dep for #318297

  02 Jan 2010; Brent Baude <ranger@gentoo.org> docbook2X-0.8.8-r2.ebuild:
  Marking docbook2X-0.8.8-r2 ppc64 for bug 290161

  02 Dec 2009; Raúl Porcel <armin76@gentoo.org> docbook2X-0.8.8-r2.ebuild:
  Add ~s390/~sh

  18 Nov 2009; Raúl Porcel <armin76@gentoo.org> docbook2X-0.8.8-r2.ebuild:
  Add ~ia64 wrt #290161

  17 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  docbook2X-0.8.7-r1.ebuild, docbook2X-0.8.8-r2.ebuild:
  Make repoman happy and keyword for ~arm as it compiles there.

  08 Nov 2009; Tobias Klausmann <klausman@gentoo.org>
  docbook2X-0.8.8-r2.ebuild:
  Keyworded on alpha, bug #290161

  06 Nov 2009; Harald van Dĳk <truedfx@gentoo.org>
  docbook2X-0.8.8-r2.ebuild:
  Regenerate configure script to get rid of an already fixed autoconf bug
  (#290284)

  17 Sep 2008; Jeroen Roovers <jer@gentoo.org> docbook2X-0.8.8-r2.ebuild:
  Stable for HPPA (bug #222041).

  17 Jul 2008; Alexis Ballier <aballier@gentoo.org>
  docbook2X-0.8.8-r2.ebuild:
  keyword ~x86-fbsd

  29 Jun 2008; Raúl Porcel <armin76@gentoo.org> docbook2X-0.8.8-r2.ebuild:
  sparc stable wrt #222041

  26 Jun 2008; nixnut <nixnut@gentoo.org> docbook2X-0.8.8-r2.ebuild:
  Stable on ppc wrt bug 222041

  25 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  docbook2X-0.8.8-r2.ebuild:
  stable x86, bug 222041

  25 Jun 2008; Santiago M. Mola <coldwind@gentoo.org>
  docbook2X-0.8.8-r2.ebuild:
  amd64 stable wrt bug #222041

*docbook2X-0.8.8-r2 (22 May 2008)

  22 May 2008; Peter Volkov <pva@gentoo.org>