@@ -1,13 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX docbook2X-0.8.8-error_on_missing_refentry.patch 1247 RMD160 b8994d28b83b62a3880291e4bc22a13166653754 SHA1 0802e9a73aa4fd146c5394f5cd200c7e452de18e SHA256 273eaa08cfff75bb5fab4975761d1e427e4180d82700da396901a59ed0546c0d
 AUX docbook2X-0.8.8-filename_whitespace_handling.patch 2080 RMD160 18965f6a35d2604e85558b188ae74ae3028113bf SHA1 db6411e5ee48b83c1d9a2fed296020c4f00e17d3 SHA256 ac5755da0dbdd67e7131284e865d86df24a56ac26cfbcdcdbe561926a54999fd
 AUX docbook2X-0.8.8-preprocessor_declaration_syntax.patch 3358 RMD160 9d65c7e6cf48b0a99c7cb12e5ba2bfb48ebbf573 SHA1 eda3c5d507cd21c1f564110111c5f7a6c26c6fab SHA256 0f571f0e9576ef09a07c46da76723cd3f83085ccf8daf25dee15b9921455112a
-DIST docbook2X-0.6.1.tar.gz 231262 RMD160 78b7f0cff04093a2c35371803d34c5c32c7eb8a9 SHA1 df1c70b3fa531c97fe406bea06eb3b5da05d4d1c SHA256 fb162799d29a86e2d7b506b87edd9b88eb6b126ed4b9648ac658fcdd0ebe058f
-DIST docbook2X-0.8.7.tar.gz 656814 RMD160 89b40ffe563def5416139315e46e63b4f13d2307 SHA1 14aa84bc28080a74f9c47126dc21a9982a6cf7c0 SHA256 562c143f64091b7e537042a6dce582d98bd4120b08a500ded3f78815c334e5f4
 DIST docbook2X-0.8.8.tar.gz 723909 RMD160 35c8dcbe86e91e787a67b1d17251bf00fed9aabf SHA1 7dc34d420f8aae2a0c0cdb39f52146ce005bf902 SHA256 4077757d367a9d1b1427e8d5dfc3c49d993e90deabc6df23d05cfe9cd2fcdc45
-EBUILD docbook2X-0.6.1-r2.ebuild 1493 RMD160 9b71d505117606242cfbbbe9b1c127a9d6d9565c SHA1 0da44b91ee4c2891ef982cb9d9d09569ea37f4b6 SHA256 0046e0cf067e085addeaec0ff0e3617b9c70542870baa09a412f0b9ee9535359
-EBUILD docbook2X-0.8.7-r1.ebuild 938 RMD160 719bbeb2fddde84764e532f597a91aa03a15b4cb SHA1 2d061cdfe0a924231edaa86f1ae7da42b944d02f SHA256 87138d6ef7e650e05a489a7815ed59a7a9838188f9df2ec6b628f0a0843e59f6
-EBUILD docbook2X-0.8.8-r1.ebuild 1032 RMD160 616b540f10794e7f4680e18886cce8dbd2718940 SHA1 6d64debc6b3107d887f68de29fd869c82ceb5bfd SHA256 04587c87194ca5f409296f43cbe20fb55fe5b5f6b52880cce3b4ecb385454d1d
-EBUILD docbook2X-0.8.8-r2.ebuild 1608 RMD160 9b6fd376fb7eee27aa67feb69198d7916fb851fa SHA1 c917df811440293364ae57b9f64929001beebe6f SHA256 277c3a8bfff7da26d797c3cc3c0e3eb9f66f7d64d217200c579390801f65ac85
-EBUILD docbook2X-0.8.8.ebuild 1001 RMD160 7342631b1240fa4b8322aaa9bd00b92288cdffc6 SHA1 32de09cdd287df655697aaec6cd1bd0eaf67b0a3 SHA256 2cdf239aefe30673c829ae66b0ee1afd05d9e3e38fe558db8ff8f8a9d268055c
-MISC ChangeLog 5817 RMD160 eb23f8a23eec6619c31986fb5329f65e0f94ac23 SHA1 b150d2699ca3d5c73d4a1925a0804be21d991255 SHA256 758acb0fb3dcbe7d2e85f9f39754ff6f576558b87e25a2407924eedb51665f73
+EBUILD docbook2X-0.8.8-r2.ebuild 1538 RMD160 611bbb812b7b38b2489e05e8ebfefe55e19ccb8b SHA1 a8e43a0546f547e1dae0c7e66c57d8c0ce5c0473 SHA256 d01f29410d4a7c77c5d4b538209040fa743395efccab70d856850466a7d88a03
+MISC ChangeLog 6101 RMD160 bb57ba4e36eddc7813185e9a4994e5eb883acfcf SHA1 94c02076b513174b02934e2485c0bd4f45ab4e55 SHA256 dd5a3d82711e8a179d5cec1a89de42b358a78465ee642c1b239b2a7803dd366e
 MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkyGor0ACgkQni8M22OVw8CJIQCgqrqzx975zB9NJiVa9qXNvTeF
+aR4AoKpnAT7ACQmM0ca4vaX9C6FKnqR7
+=L3G+
+-----END PGP SIGNATURE-----
